# onto-tools

./: .coverage  .gitignore  ESTRUTURA-PROJETO.md  GUIA-EXECUCAO.md  INICIO-RAPIDO.md  README.md  environment.yml  pyproject.toml  requirements.txt  setup.py
config/: .coveragerc  README.md  config.yaml  pytest.ini
coverage/: coverage.xml
data/: README.md
data/edo/governance/review/: export-log.json  run_manifest.json  test-norm-canon.autofix.ttl
data/examples/: energy-domain-ontology.ttl  rules.json
docs/rc-templates/: RC_EXECUTION_PROMPT-rc13.md  RC_EXECUTION_PROMPT-rcNN-v3.md  RC_TEMPLATE_DESIGN-rc13.md  RC_TEMPLATE_DESIGN-rcNN-v3.md
outputs/logs/: audit-log-session-20260227-011701.json  audit-log-session-20260227-011701.md  audit-log-session-20260227-011820.json  audit-log-session-20260227-011820.md  audit-log-session-20260227-012552.json
outputs/logs/RC_v13_CANON/20260227_042545/: CHECKSUMS_SHA256.txt  RC_v13_CANON_SUMMARY.md  rc13_result.json  (+1 more)
scripts/: .coverage  README.md  fill_rc13_bundle.py  fill_rc_bundle.py  gen_norm_report.py  isomorphism_check.py  menu.bat  menu.ps1  rc.ps1  refactor_remove_disabled.py  run_rc.py  run_rc13.py  setup.ps1  setup_env.ps1
src/onto_tools/: __init__.py  __main__.py  cli_menu.py
src/onto_tools/adapters/: __init__.py
src/onto_tools/application/: facade.py
tests/: FORA-DO-ESCOPO-ARTIGO.md
tests/1-uc-ontology/: conftest.py
tests/1-uc-ontology/cli/: conftest.py  test_cli_commands.py  test_cli_menu.py  test_verify_commands.py
tests/1-uc-ontology/data/: README.md  __init__.py
tests/1-uc-ontology/e2e/: conftest.py  test_canonicalization_e2e.py  test_cli_simulation_scenarios.py
tests/1-uc-ontology/fixtures/: domain_attribute_samples.ttl  ontology_quality_samples.ttl  protege_deadweightcollar.ttl  protege_grooveheight.ttl  protege_groovepoint.ttl
tests/1-uc-ontology/integration/: __init__.py  test_facade_flows.py  test_facade_normalize.py  test_normalization_complete.py  test_real_coverage.py  test_uc104_verification.py  test_verification_integration.py
tests/1-uc-ontology/unit/: test_adapters.py  test_audit_formatter.py  test_canonicalizer.py  test_canonicalizer_determinism_v9.py  test_facade.py  test_naming_validator.py  test_normalize_reporting_invariance.py  test_normalizer.py  test_ontology_graph.py  test_preflabel_correction.py  test_protege_serializer_coverage.py  test_protege_style_alignment.py  test_protege_style_serializer_snapshot.py  test_protege_style_validity.py  test_quality_domainattribute_constraints.py  test_quality_ifc_constraints.py  test_quality_validator.py  test_rc_runner_utils.py  test_rdflib_adapter.py  test_title_case.py  test_uri_resolver.py  test_verification_evidence.py  test_verification_hasher.py  test_verification_idempotency.py  test_verification_isomorphism.py  test_verification_manifest.py  test_verification_rc_workflow.py
tests/manual/logs/: audit-log-session-20260310-155225.json  audit-log-session-20260310-155225.md  audit-log-session-20260310-155442.json  audit-log-session-20260310-155442.md  audit-log-session-20260310-160056.json  audit-log-session-20260310-160056.md
(+149 files in other folders)
